Fix lighting in robit skin select gui and change how we draw tooltips to use absolute positions instead of relative due to the changes in tooltip rendering to ensure our tooltips get properly wrapped when overflowing the screen